css/main.css
/* ... */
.darkmode--activated .strongs-current-verse w {
  color: lightgreen;
}

#module-feature-filter label {
  margin-right: 1em;
}

.Android #module-feature-filter label {
  float: left;
}

.progress-bar {
  margin-top: 1em;
  height: 2em;
  clear: both;
}

.progress-bar div {
  height: 95%;
}

.ui-progressbar {
  position: relative;
}

.progress-label {
  position: absolute;
  left: 50%;
  top: 4px;
  font-weight: bold;
  text-shadow: 1px 1px 0 #fff;
}

.darkmode--activated .progress-label {
  text-shadow: none;
}

.search-progress-bar {
  display: none
}

.load-book-results {
  margin-left: 1em;
}

.Windows,
.Windows button,
.Windows select,
.Windows .verse-list,
.Windows .loading-indicator-text,
.Windows .loading-subtitle,
.Windows div.CodeMirror {
  font-family: "Segoe UI", sans-serif;
}

.Windows div.CodeMirror {
  font-size: 1em;
}

.Linux,
.Linux button,
.Linux select,
.Linux .verse-list,
.Linux .loading-indicator-text,
.Linux .loading-subtitle,
.Linux div.CodeMirror {
  font-family: "Liberation Sans", Ubuntu, sans-serif;
}

.Linux div.CodeMirror {
  font-size: 1em;
}

.Android,
.Android button,
.Android select,
.Android .verse-list,
.Android .loading-indicator-text,
.Android .loading-subtitle,
.Android div.CodeMirror {
  font-family: Roboto, sans-serif;
}

.OSX,
.OSX button,
.OSX select,
.OSX .verse-list,
.OSX .loading-indicator-text,
.OSX .loading-subtitle,
.OSX div.CodeMirror {
  font-family: -apple-system, system-ui, BlinkMacSystemFont, sans-serif;
}

.sword-note,
.sword-note reference,
.sword-note hi {
  display: none;
}

.sword-xref-marker, .sword-note-marker {
  display: inline-block;
  padding-right: 0.2em;
  font-weight: bold;
  position: relative;
  top: -0.3em;
}

.sword-note-marker {
  color: #2779AA;
}

.sword-xref-marker {
  cursor: pointer;
}

.scrollable::-webkit-scrollbar,
.ui-selectmenu-menu ul::-webkit-scrollbar {
  width: 0.5em;
  border-width: 1px;
  border-radius: 6px;
}

.scrollable::-webkit-scrollbar-track,
.ui-selectmenu-menu ul::-webkit-scrollbar-track {
  box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
  border-radius: 6px;
}
 
.scrollable::-webkit-scrollbar-thumb,
.ui-selectmenu-menu ul::-webkit-scrollbar-thumb {
  background-color: darkgrey;
  border: 1px solid slategrey;
  border-radius: 6px;
}

.android-dialog-large-fontsize .ui-dialog-titlebar {
  font-size: 120%;
}

#permissions-box-content, #general-info-box-content {
  font-size: 120%;
}

.dialog-without-close-button .ui-dialog-titlebar-close {
  display: none;
}

.info-tabs {
  height: 390px;
  overflow-y: scroll;
}

.text-loader {
  float: right;
}

#app-info-tabs .ui-tabs-nav {
  font-size: 0.9em;
}

.darkmode--activated p,
.darkmode--activated .verse-list-composite {
  color: #cccccc;
}

.darkmode--activated .logo {
  mix-blend-mode: difference;
}

.darkmode--activated section {
  background: none;
  background-color: #1e1e1e;
  color: #cccccc;
}

.darkmode--activated .assistant > .steps .disabled a,
.darkmode--activated .assistant > .steps .disabled a:hover,
.darkmode--activated .assistant > .steps .disabled a:active {
  background: none;
  background-color: gray;
}

